# RedTeamDashboard

./: CHARTER.md  CLAUDE.md  README.md  quick_test.sh
backend/: Dockerfile  pyproject.toml
backend/alembic/versions/: 0004_finding_phase_status.py  0006_observations.py  0007_orchestrator.py  0007_user_provider_keys.py  0008_orchestrator.py  0009_attachments.py  0011_mcp_lease_requires_container.py  0013_mcp_lease_task_id_nullable.py  0014_workflow_templates.py  0015_entities_table.py
backend/app/: main.py
backend/app/agents/: __init__.py  strategic.py  tactical.py
backend/app/api/: approvals.py  deps.py  engagements.py  entities.py  orchestrator.py  reports.py  workflow_templates.py
backend/app/core/: blob.py  config.py  entra.py  pricing.py
backend/app/mcp/: auth.py  server.py  standalone.py
backend/app/models/: __init__.py  agent_execution.py  attachment.py  entity.py  finding.py  mcp_lease.py  observation.py  suggestion.py  task.py  user_provider_key.py  workflow_template.py
backend/app/orchestrator/: graph.py  llm.py
backend/tests/: test_approvals_api.py  test_costs.py  test_direct_run_lease.py  test_engagements_api.py  test_entra_auth.py  test_findings_import.py  test_findings_validation.py  test_maltego_import.py  test_mcp_lease_runosint.py  test_mcp_lease_wireup.py  test_mcp_strategic.py  test_nessus_import.py  test_observations_api.py  test_orchestrator.py  test_provider_key_wireup.py  test_reports.py  test_scope_import.py  test_tool_packs.py  test_worker.py  test_worker_lease_filter.py  test_worker_mcp_executor.py  test_workflow_templates.py
(+87 files in other folders)
