[project]
name = "redteam-dashboard-backend"
version = "0.0.1"
description = "Red Team Dashboard backend: FastAPI control plane + LangGraph worker."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "redis>=5.2",
    "httpx>=0.28",
    "structlog>=24.4",
    "uuid-utils>=0.10",
    "langgraph>=0.2.50",
    "langchain-core>=0.3.20",
    "langchain-anthropic>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.2.14",
    "dnspython>=2.6",
    "python-whois>=0.9",
    "cryptography>=43.0",
    "pyjwt>=2.9",
    "weasyprint>=63.0",
    "jinja2>=3.1",
    "langgraph-checkpoint-postgres>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
